--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     font-family: "Outfit", sans-serif;;
 }
 body{
-    background-color: #f5f5f5;
+    background-color: #fcfcfc;
 }
 a{
     text-decoration: none;
