--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -15,8 +15,9 @@
 }
 .hero-text h1{
     margin-top: 40px;
-    font-size: 34px;
-    font-weight: 550;
+    margin-bottom: 20px;
+    font-size: 35px;
+    font-weight: 500;
 }
 .hero-text p{
     font-size: 20px;
