--- a/src/components/Positions/Positions.css
+++ b/src/components/Positions/Positions.css
@@ -1,5 +1,5 @@
 .positions{
-    margin: 50px auto;
+    margin: 70px auto;
     width: 90%;
     display: flex;
     align-items: center;
@@ -11,35 +11,38 @@
 .position hr{
     margin-top: 10px; /* Adds space above the horizontal line */
     border: 0;
-    height: 1px;
-    background-color: #000; /* Line color */
+    height: 1.5px;
+    background-color: #000F38; /* Line color */
     width: 100%; /* Line width relative to its container */
     margin-left: auto; /* Centers the line horizontally */
     margin-right: auto; /* Centers the line horizontally */
 }
 .position h1{
+    color: #000F38;
     font-size: 27px;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
 .position h2{
-    font-size: 20px;
+    color: #000F38;
+    font-size: 18px;
     margin-bottom: 10px;
 }
 .position p{
-    font-size: 17px;
+    color: #000F38;
+    font-size: 18px;
 }
 .learn-more{
     background: #FFF;
-    color: #212121;
+    color: #000F38;
     padding: 15px 27px;
-    font-size: 17px;
+    font-size: 18px;
     height: 90px;
     cursor: pointer;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid black;
+    border: 2px solid #000F38;
 }
 .learn-more h1{
     font-size: 20px;
