--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -41,3 +41,15 @@
     opacity: 1;
     padding-top: 0;
 }
+
+/* media queries */
+
+@media (max-width: 650px){
+    .services{
+        flex-direction: column;
+    }
+    .service{
+        flex-basis: 100%;
+        margin: 20px;
+    }
+}
