--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,7 @@
     padding-top: 80px;
     padding-left: 10%;
     padding-right: 10%;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
     margin: 80px auto;
     max-width: 90%;
     display: flex;
@@ -17,9 +17,9 @@
 }
 .contact-col h3{
     font-weight: 600;
-    font-size: 27px;
+    font-size: 30px;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 .contact-col img{
     width: 300px;
@@ -56,7 +56,7 @@
 .btn-white-blue:hover{
     background: #4454eb;
     color: #FFF;
-    border: 2px solid #FFF;
+    border: 1px solid #FFF;
 }
 .contact form input, .contact form textarea{
     display: block;
@@ -73,4 +73,24 @@
 .contact-col span{
     display: block;
     margin: 20px 0;
+}
+
+/* Media queries */
+@media (max-width: 1000px){
+    .contact{
+        display: block;
+        padding-top: 60px;
+    }
+    .contact-col{
+        padding: 10px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .contact form input, .contact form textarea{
+        font-size: 16px;
+    }
+    .btn-white-blue{
+        font-size: 16px;
+    }
 }
