--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -16,12 +16,34 @@
 .hero-text h1{
     margin-top: 40px;
     margin-bottom: 20px;
-    font-size: 35px;
+    font-size: 33px;
     font-weight: 500;
+    padding: 10px;
 }
 .hero-text p{
     font-size: 20px;
     max-width: 700px;
     margin: 20px auto 30px;
     line-height: 1.5;
+}
+
+/* media queries */
+@media (max-width: 850px){
+    .hero-text h1{
+        font-size: 30px;
+    }
+    .hero-text p{
+        font-size: 18px;
+    }
+}
+@media (max-width: 650px){
+    .hero-text h1{
+        font-size: 30px;
+        max-width: 400px;
+        margin: auto;
+    }
+    .hero-text p{
+        font-size: 17px;
+        max-width: 400px;
+    }
 }
