--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -31,3 +31,45 @@ nav ul li{
     font-size: 18px;
     font-weight: 400;
 }
+.menu-icon{
+    display: none;
+}
+
+/* media query */
+@media (max-width: 1000px){
+    .logo{
+        width: 40px
+    }
+    nav ul li{
+        margin: 10px 15px;
+    }
+}
+@media (max-width: 840px){
+    .nav{
+        padding: 15px 0;
+    }
+    nav ul{
+        position: fixed;
+        top: 0;
+        right: 0px;
+        bottom: 0;
+        background-color: #4454eb;
+        z-index: -1;
+        width: 200px;
+        padding-top: 70px;
+        transition: 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px 40px;
+        color: #fff;
+    }
+    .menu-icon{
+        display: block;
+        width: 30px;
+        cursor: pointer;
+    }
+    .hide-mobile-menu{
+        right: -200px;
+    }
+}
