--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -56,3 +56,29 @@
     font-size: 18px;
     font-weight: 550;
 }
+
+/* media queries */
+@media (max-width: 800px){
+    .testimonials{
+        padding: 0 40px;
+    }
+    .next-btn, .back-btn{
+        padding: 10px;
+        width: 35px;
+    }
+    .testimonials ul li{
+        padding: 10px;
+    }
+    .slide{
+        padding: 20px;
+    }
+    .user-info{
+        margin-bottom: 10px;
+    }
+    .user-info h3{
+        font-size: 18px;
+    }
+    .user-info span{
+        font-size: 16px;
+    }
+}
