--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,15 @@ a{
 .highlight{
     color: #89a4fe;
 }
+
+/* media query */
+@media (max-width: 1200px){
+    .container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .btn-white{
+        padding: 14px 25px;
+        font-size: 17px;
+    }
+}
