--- a/src/components/Positions/Positions.css
+++ b/src/components/Positions/Positions.css
@@ -1,5 +1,6 @@
 .positions{
     margin: 70px auto;
+    margin-bottom: 90px;
     width: 90%;
     display: flex;
     align-items: center;
@@ -12,36 +13,36 @@
     margin-top: 10px; /* Adds space above the horizontal line */
     border: 0;
     height: 1.5px;
-    background-color: #000F38; /* Line color */
+    background-color: #333; /* Line color */
     width: 100%; /* Line width relative to its container */
     margin-left: auto; /* Centers the line horizontally */
     margin-right: auto; /* Centers the line horizontally */
 }
 .position h1{
-    color: #000F38;
+    color: #333;
     font-size: 27px;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
 .position h2{
-    color: #000F38;
+    color: #333;
     font-size: 18px;
     margin-bottom: 10px;
 }
 .position p{
-    color: #000F38;
+    color: #333;
     font-size: 18px;
 }
 .learn-more{
     background: #FFF;
-    color: #000F38;
+    color: #333;
     padding: 15px 27px;
     height: 80px;
     cursor: pointer;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid #000F38;
+    border: 2px solid #333;
 }
 .learn-more h1{
     font-size: 18px;
