--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,5 +1,6 @@
 .testimonials{
     margin: 50px auto;
+    margin-bottom: 100px;
     padding: 0 80px;
     position: relative;
 }
@@ -36,11 +37,12 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     padding: 40px;
     border-radius: 10px;
-    color: #000F38;
+    color: #333;
     line-height: 1.4;
 }
 .slide p{
     font-size: 18px;
+    line-height: 1.5;
 }
 .user-info{
     display: flex;
