--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,8 @@
     padding-top: 80px;
     padding-left: 10%;
     padding-right: 10%;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
+    border-radius: 25px;
     margin: 80px auto;
     max-width: 90%;
     display: flex;
