--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -83,6 +83,9 @@
         display: block;
         padding-top: 60px;
     }
+    contact-col img{
+        width: 250px;
+    }
     .contact-col{
         padding: 10px;
         flex-direction: column;
