--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -83,9 +83,6 @@
         display: block;
         padding-top: 60px;
     }
-    contact-col img{
-        width: 250px;
-    }
     .contact-col{
         padding: 10px;
         flex-direction: column;
@@ -97,5 +94,11 @@
     }
     .btn-white-blue{
         font-size: 16px;
+    }
+}
+
+@media (max-width: 650px){
+    contact-col img{
+        width: 200px;
     }
 }
