--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -98,7 +98,7 @@
 }
 
 @media (max-width: 650px){
-    contact-col img{
-        width: 200px;
+    .contact-col img{
+        width: 90%;
     }
 }
