--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Outfit", sans-serif;;
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Outfit", sans-serif;
 }
-body{
-    background-color: #fcfcfc;
+body {
+	background-color: #fcfcfc;
 }
-a{
-    text-decoration: none;
-    color: inherit;
-    line-height: 1;
-    cursor: pointer;
+a {
+	text-decoration: none;
+	color: inherit;
+	line-height: 1;
+	cursor: pointer;
 }
-.container{
-    padding-left: 10%;
-    padding-right: 10%;
+.container {
+	padding-left: 10%;
+	padding-right: 10%;
 }
-.btn-white{
-    background: #FFF;
-    color: #212121;
-    padding: 18px 30px;
-    font-size: 18px;
-    border-radius: 30px;
-    cursor: pointer;
-    border: 0;
-    outline: 0;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+.btn-white {
+	background: #fff;
+	color: #212121;
+	padding: 18px 30px;
+	font-size: 18px;
+	border-radius: 30px;
+	cursor: pointer;
+	border: 0;
+	outline: 0;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 }
-.btn-white img{
-    width: 20px;
-    margin-left: 10px;
+.btn-white img {
+	width: 20px;
+	margin-left: 10px;
 }
-.highlight{
-    color: #89a4fe;
+.highlight {
+	color: #89a4fe;
 }
 
 /* media query */
-@media (max-width: 1200px){
-    .container{
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-    .btn-white{
-        padding: 14px 25px;
-        font-size: 17px;
-    }
+@media (max-width: 1200px) {
+	.container {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+	.btn-white {
+		padding: 14px 25px;
+		font-size: 17px;
+	}
 }
