--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,102 +1,104 @@
-.contact{
-    padding-top: 60px;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 15px;
-    margin: 80px auto;
-    max-width: 90%;
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-    background: #4454eb;
-    color: #fff;
-    font-size: 16px;
+.contact {
+	padding-top: 60px;
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-bottom: 15px;
+	margin: 80px auto;
+	max-width: 90%;
+	display: flex;
+	align-content: center;
+	justify-content: space-between;
+	background: #4454eb;
+	color: #fff;
+	font-size: 16px;
 }
-.contact-col{
-    flex-basis: 48%;
+.contact-col {
+	flex-basis: 48%;
 }
-.contact-col h3{
-    font-weight: 600;
-    font-size: 30px;
-    align-items: center;
-    margin-bottom: 25px;
+.contact-col h3 {
+	font-weight: 600;
+	font-size: 30px;
+	align-items: center;
+	margin-bottom: 25px;
 }
-.contact-col img{
-    width: 300px;
-    margin-bottom: 20px;
+.contact-col img {
+	width: 300px;
+	margin-bottom: 20px;
 }
-.contact-col p{
-    font-size: 16px;
-    max-width: 300px;
-    list-style: 0.3;
-    color: #fff;
+.contact-col p {
+	font-size: 16px;
+	max-width: 300px;
+	list-style: 0.3;
+	color: #fff;
 }
-.contact-col ul li{
-    display: flex;
-    align-items: center;
-    margin: 20px 0;
+.contact-col ul li {
+	display: flex;
+	align-items: center;
+	margin: 20px 0;
 }
-.contact-col ul li img{
-    width: 50px;
+.contact-col ul li img {
+	width: 50px;
 }
-.btn-white-blue{
-    background: #FFF;
-    color: #4454eb;
-    font-weight: 500;
-    padding: 13px 40px;
-    margin-top: 10px;
-    font-size: 16px;
-    border-radius: 0px;
-    cursor: pointer;
-    border: 0;
-    outline: 0;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+.btn-white-blue {
+	background: #fff;
+	color: #4454eb;
+	font-weight: 500;
+	padding: 13px 40px;
+	margin-top: 10px;
+	font-size: 16px;
+	border-radius: 0px;
+	cursor: pointer;
+	border: 0;
+	outline: 0;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 }
-.btn-white-blue:hover{
-    background: #4454eb;
-    color: #FFF;
-    border: 1px solid #FFF;
+.btn-white-blue:hover {
+	background: #4454eb;
+	color: #fff;
+	border: 1px solid #fff;
 }
-.contact form input, .contact form textarea{
-    display: block;
-    width: 100%;
-    background: #fff;
-    padding: 8px;
-    font-size: 18px;
-    border: 0;
-    outline: 0;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    resize: none;
+.contact form input,
+.contact form textarea {
+	display: block;
+	width: 100%;
+	background: #fff;
+	padding: 8px;
+	font-size: 18px;
+	border: 0;
+	outline: 0;
+	margin-bottom: 15px;
+	margin-top: 5px;
+	resize: none;
 }
-.contact-col span{
-    display: block;
-    margin: 20px 0;
+.contact-col span {
+	display: block;
+	margin: 20px 0;
 }
 
 /* Media queries */
-@media (max-width: 1000px){
-    .contact{
-        display: block;
-    }
-    .contact-col{
-        padding: 10px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .contact form input, .contact form textarea{
-        font-size: 16px;
-    }
-    .btn-white-blue{
-        font-size: 16px;
-    }
+@media (max-width: 1000px) {
+	.contact {
+		display: block;
+	}
+	.contact-col {
+		padding: 10px;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.contact form input,
+	.contact form textarea {
+		font-size: 16px;
+	}
+	.btn-white-blue {
+		font-size: 16px;
+	}
 }
 
-@media (max-width: 650px){
-    .contact-col img{
-        width: 90%;
-    }
+@media (max-width: 650px) {
+	.contact-col img {
+		width: 90%;
+	}
 }
