--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,49 +1,50 @@
-.hero{
-    width: 100%;
-    min-height: 100vh;
-    background: linear-gradient(rgba(8,0,58,0.9), rgba(8,0,58,0.7)), url('../../assets/Chicago2.jpg');
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.hero {
+	width: 100%;
+	min-height: 100vh;
+	background: linear-gradient(rgba(8, 0, 58, 0.9), rgba(8, 0, 58, 0.7)),
+		url("../../assets/Chicago2.jpg");
+	background-size: cover;
+	background-position: center;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
-.hero-text{
-    text-align: center;
-    max-width: 800px;
+.hero-text {
+	text-align: center;
+	max-width: 800px;
 }
-.hero-text h1{
-    margin-top: 40px;
-    margin-bottom: 20px;
-    font-size: 33px;
-    font-weight: 500;
-    padding: 10px;
+.hero-text h1 {
+	margin-top: 40px;
+	margin-bottom: 20px;
+	font-size: 33px;
+	font-weight: 500;
+	padding: 10px;
 }
-.hero-text p{
-    font-size: 20px;
-    max-width: 700px;
-    margin: 20px auto 30px;
-    line-height: 1.5;
+.hero-text p {
+	font-size: 20px;
+	max-width: 700px;
+	margin: 20px auto 30px;
+	line-height: 1.5;
 }
 
 /* media queries */
-@media (max-width: 850px){
-    .hero-text h1{
-        font-size: 30px;
-    }
-    .hero-text p{
-        font-size: 18px;
-    }
+@media (max-width: 850px) {
+	.hero-text h1 {
+		font-size: 30px;
+	}
+	.hero-text p {
+		font-size: 18px;
+	}
 }
-@media (max-width: 650px){
-    .hero-text h1{
-        font-size: 30px;
-        max-width: 400px;
-        margin: auto;
-    }
-    .hero-text p{
-        font-size: 16px;
-        max-width: 400px;
-    }
+@media (max-width: 650px) {
+	.hero-text h1 {
+		font-size: 30px;
+		max-width: 400px;
+		margin: auto;
+	}
+	.hero-text p {
+		font-size: 16px;
+		max-width: 400px;
+	}
 }
