--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,86 +1,88 @@
-.testimonials{
-    margin: 50px auto;
-    margin-bottom: 100px;
-    padding: 0 80px;
-    position: relative;
+.testimonials {
+	margin: 50px auto;
+	margin-bottom: 100px;
+	padding: 0 80px;
+	position: relative;
 }
-.next-btn, .back-btn{
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    padding: 15px;
-    width: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    background: #4454eb;
+.next-btn,
+.back-btn {
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+	padding: 15px;
+	width: 50px;
+	border-radius: 50%;
+	cursor: pointer;
+	background: #4454eb;
 }
-.back-btn{
-    right: auto;
-    left: 0;
+.back-btn {
+	right: auto;
+	left: 0;
 }
-.slider{
-    overflow: hidden;
+.slider {
+	overflow: hidden;
 }
-.slider ul{
-    display: flex;
-    width: 200%;
-    overflow-x: hidden;
-    transition: 0.5s;
+.slider ul {
+	display: flex;
+	width: 200%;
+	overflow-x: hidden;
+	transition: 0.5s;
 }
-.slider ul li{
-    list-style: none;
-    width: 50%;
-    padding: 20px;
+.slider ul li {
+	list-style: none;
+	width: 50%;
+	padding: 20px;
 }
-.slide{
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    padding: 40px;
-    border-radius: 10px;
-    color: #333;
-    line-height: 1.4;
+.slide {
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+	padding: 40px;
+	border-radius: 10px;
+	color: #333;
+	line-height: 1.4;
 }
-.slide p{
-    font-size: 16px;
-    line-height: 1.5;
+.slide p {
+	font-size: 16px;
+	line-height: 1.5;
 }
-.user-info{
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    font-size: 16px;
+.user-info {
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+	font-size: 16px;
 }
-.user-info h3{
-    font-size: 20px;
-    color: #4454eb;
+.user-info h3 {
+	font-size: 20px;
+	color: #4454eb;
 }
-.user-info span{
-    font-size: 18px;
-    font-weight: 550;
+.user-info span {
+	font-size: 18px;
+	font-weight: 550;
 }
 
 /* media queries */
-@media (max-width: 800px){
-    .testimonials{
-        padding: 0 40px;
-    }
-    .next-btn, .back-btn{
-        padding: 10px;
-        width: 35px;
-    }
-    .testimonials ul li{
-        padding: 10px;
-    }
-    .slide{
-        padding: 20px;
-    }
-    .user-info{
-        margin-bottom: 10px;
-    }
-    .user-info h3{
-        font-size: 18px;
-    }
-    .user-info span{
-        font-size: 16px;
-    }
+@media (max-width: 800px) {
+	.testimonials {
+		padding: 0 40px;
+	}
+	.next-btn,
+	.back-btn {
+		padding: 10px;
+		width: 35px;
+	}
+	.testimonials ul li {
+		padding: 10px;
+	}
+	.slide {
+		padding: 20px;
+	}
+	.user-info {
+		margin-bottom: 10px;
+	}
+	.user-info h3 {
+		font-size: 18px;
+	}
+	.user-info span {
+		font-size: 16px;
+	}
 }
