--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,35 +1,35 @@
 .hero {
+	/* hero section, parent block */
 	width: 100%;
 	min-height: 100vh;
-	background: linear-gradient(rgba(8, 0, 58, 0.9), rgba(8, 0, 58, 0.7)),
-		url("../../assets/Chicago2.jpg");
-	background-size: cover;
-	background-position: center;
-	color: #fff;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	background: linear-gradient(rgba(8, 0, 58, 0.9), rgba(8, 0, 58, 0.7)), /* gradient overlay */
+		url("../../assets/Chicago2.jpg"); /* image path */
+	background-size: cover; /* image covers the entire background */
+	background-position: center; /* image centered */
+	color: #fff; /* text color */
+	display: flex; /* flexbox */
+	align-items: center; /* vertical alignment */
+	justify-content: center; /* horizontal alignment */
 }
 .hero-text {
 	text-align: center;
-	max-width: 800px;
+	max-width: 900px;
 }
 .hero-text h1 {
-	margin-top: 40px;
-	margin-bottom: 20px;
-	font-size: 33px;
-	font-weight: 500;
-	padding: 10px;
+	font-size: 35px;
+	font-weight: 600;
+	margin: 30px;
 }
 .hero-text p {
 	font-size: 20px;
-	max-width: 700px;
-	margin: 20px auto 30px;
 	line-height: 1.5;
+	margin: 0px 30px 60px 30px;
 }
 
-/* media queries */
 @media (max-width: 850px) {
+	.hero-text {
+		max-width: 650px;
+	}
 	.hero-text h1 {
 		font-size: 30px;
 	}
@@ -38,13 +38,13 @@
 	}
 }
 @media (max-width: 650px) {
+	.hero-text {
+		max-width: 450px;
+	}
 	.hero-text h1 {
-		font-size: 30px;
-		max-width: 400px;
-		margin: auto;
+		font-size: 28px;
 	}
 	.hero-text p {
-		font-size: 16px;
-		max-width: 400px;
+		font-size: 18px;
 	}
 }
