--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,9 @@
 nav {
 	width: 100%;
 	height: 10%;
-	background: #fff;
+	background: #ffffff;
+	opacity: 0.98;
 	color: #333;
-	padding: 4px 0;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -12,64 +12,66 @@ nav {
 	justify-content: space-between;
 	z-index: 10;
 }
+nav ul li {
+	display: inline-block;
+	list-style: none;
+	margin: 5px 20px;
+	font-size: 20px;
+}
 .logo-container {
 	display: flex;
 	align-items: center;
 }
 .logo {
 	width: 40px;
-	margin-right: 15px;
+	margin-right: 10px;
 }
 .logo-text {
 	font-size: 23px;
 	font-weight: 800;
 }
-nav ul li {
-	display: inline-block;
-	list-style: none;
-	margin: 5px 20px;
-	font-size: 18px;
-	font-weight: 400;
+.menu-btn:hover {
+	color: #4454eb;
 }
 .menu-icon {
 	display: none;
 }
 
-/* media query */
 @media (max-width: 1000px) {
-	.logo {
-		width: 40px;
-	}
 	nav ul li {
-		margin: 10px 15px;
+		margin: 5px 15px;
+		font-size: 18px;
 	}
 }
 @media (max-width: 840px) {
-	.nav {
-		padding: 15px 0;
-	}
 	nav ul {
 		position: fixed;
 		top: 0;
 		right: 0px;
 		bottom: 0;
 		background-color: #4454eb;
-		z-index: -1;
-		width: 200px;
+		z-index: 10;
+		width: 95%;
 		padding-top: 70px;
 		transition: 0.5s;
 	}
 	nav ul li {
 		display: block;
-		margin: 25px 40px;
+		margin: 30px 40px;
 		color: #fff;
+		font-size: 30px;
+	}
+	.menu-btn:hover {
+		color: #fff;
+		text-decoration: underline;
 	}
 	.menu-icon {
 		display: block;
 		width: 30px;
 		cursor: pointer;
+		z-index: 15;
 	}
 	.hide-mobile-menu {
-		right: -200px;
+		right: -95%;
 	}
 }
