--- a/src/index.css
+++ b/src/index.css
@@ -15,21 +15,24 @@ a {
 	cursor: pointer;
 }
 .container {
-	padding-left: 10%;
-	padding-right: 10%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 .btn-white {
 	background: #fff;
 	color: #212121;
-	padding: 18px 30px;
+	padding: 15px 30px;
 	font-size: 18px;
-	border-radius: 30px;
+	border-radius: 25px;
 	cursor: pointer;
 	border: 0;
 	outline: 0;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+}
+.btn-white:hover {
+	background: #d5dcff;
 }
 .btn-white img {
 	width: 20px;
@@ -45,8 +48,8 @@ a {
 		padding-left: 5%;
 		padding-right: 5%;
 	}
-	.btn-white {
+	/* .btn-white {
 		padding: 14px 25px;
 		font-size: 17px;
-	}
+	} */
 }
