--- a/src/components/Mission/Mission.css
+++ b/src/components/Mission/Mission.css
@@ -1,38 +1,29 @@
 .mission {
-	margin: 80px auto 0px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 90%;
 }
 .mission-left {
-	flex-basis: 50%;
+	flex-basis: 48%;
 }
 .mission-right {
-	flex-basis: 43%;
+	flex-basis: 45%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 .mission-img {
 	width: 100%;
-	border-radius: 0px;
-}
-.mission-right h2 {
-	font-size: 27px;
-	font-weight: 550;
-	color: #4454eb;
-	text-transform: none;
+	border-radius: 10px;
 }
 .mission-right p {
 	margin-top: 25px;
-	font-size: 16px;
+	font-size: 18px;
 	color: #333;
 	line-height: 1.5;
 	text-align: justify;
-	margin-bottom: 20px;
-}
-.read-more {
-	font-size: 16px;
-	color: #0066cc; /* This styles the "Read more" link */
-	text-decoration: underline;
+	margin-bottom: 40px;
 }
 
 /* media queries */
