--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,9 +1,11 @@
 .testimonials {
-	margin: 50px auto;
-	margin-bottom: 100px;
-	padding: 0 80px;
+	margin-top: 50px;
 	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+/* buttons */
 .next-btn,
 .back-btn {
 	position: absolute;
@@ -20,8 +22,10 @@
 	right: auto;
 	left: 0;
 }
+/* slider */
 .slider {
 	overflow: hidden;
+	max-width: 87%;
 }
 .slider ul {
 	display: flex;
@@ -42,7 +46,7 @@
 	line-height: 1.4;
 }
 .slide p {
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 1.5;
 }
 .user-info {
