--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,14 +1,19 @@
 .title {
 	text-align: center;
-	color: #000f38;
-	font-size: 15px;
-	font-weight: 400;
-	text-transform: uppercase;
-	margin: 80px 0 10px;
 }
 .title h2 {
-	font-size: 30px;
+	font-size: 35px;
 	font-weight: 550;
 	color: #4454eb;
 	text-transform: none;
+}
+@media (max-width: 850px) {
+	.title h2 {
+		font-size: 30px;
+	}
+}
+@media (max-width: 650px) {
+	.title h2 {
+		font-size: 28px;
+	}
 }
