--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,26 @@ a {
 	line-height: 1;
 	cursor: pointer;
 }
-.container {
-	padding-left: 5%;
-	padding-right: 5%;
+p {
+	font-size: 20px;
 }
+.home {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.container {
+	padding: 90px 7.5% 0px 7.5%;
+}
+
+/* Span highlight */
+.highlight {
+	color: #89a4fe;
+}
+
+/* White button */
 .btn-white {
-	background: #fff;
+	background: #fcfcfc;
 	color: #212121;
 	padding: 15px 30px;
 	font-size: 18px;
@@ -38,18 +52,28 @@ a {
 	width: 20px;
 	margin-left: 10px;
 }
-.highlight {
-	color: #89a4fe;
+
+/* Blue button */
+.btn-blue {
+	background: #fcfcfc;
+	color: #4454eb;
+	border: 2px solid;
+	border-color: #4454eb;
+	border-radius: 25px;
+	padding: 15px 30px;
+	font-size: 18px;
+	cursor: pointer;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+}
+.btn-blue:hover {
+	background: #4454eb;
+	color: #fcfcfc;
 }
 
-/* media query */
-@media (max-width: 1200px) {
-	.container {
-		padding-left: 5%;
-		padding-right: 5%;
+@media (max-width: 850px) {
+	p {
+		font-size: 18px;
 	}
-	/* .btn-white {
-		padding: 14px 25px;
-		font-size: 17px;
-	} */
 }
